refactor: mvp 기능 구현에 맞게 기존 코드 리팩터링